# GxCamera_calibration

./: README.md
GxCalibration/: CMakeLists.txt
GxCalibration/img/: default.xml
GxCalibration/inc/: GxCamera.hpp  h1_initboard.hpp  h2_takeImgs.hpp  h3_calibration.hpp
GxCalibration/src/: CMakeLists.txt  GxCamera.cpp  main1_initboard.cpp  main2_takeImgs.cpp  main3_calibration.cpp
img_save/: images.xml  out_camera_data.xml
